HTMLまとめ課題大問3：画像系

--- a/index.html
+++ b/index.html
@@ -33,5 +33,14 @@
     </ol>
     </div>
     <!------------------------------------------------------------>
+    <!-- 大問3:画像系 --------------------------------------------->
+    <div>
+        <h2>大問３：画像系</h2>
+        <!-- 画像を貼る alt.画像の説明 width.画像の物理的な大きさの指定（横） -->
+        <img src="./img1st.jpg" alt="スト６の画像" width="450">
+        <!-- 動画を貼る controls.再生ボタンの設置 width.物理的な動画サイズの指定(横) -->
+        <video src="./mp4file.mp4" controls width="450"></video>
+    </div>
+    <!------------------------------------------------------------>
 </body>
 </html>
