HTMLまとめ課題大問4：入力系

--- a/index.html
+++ b/index.html
@@ -42,5 +42,22 @@
         <video src="./mp4file.mp4" controls width="450"></video>
     </div>
     <!------------------------------------------------------------>
+    <!-- 大問4:入力系 --------------------------------------------->
+    <div>
+        <h2>大問４：入力系</h2>
+        <!-- 文字の入力 -->
+        <p>文字列</p>
+        <input type="text" />
+        <!-- 数字のみの入力 -->
+        <p>数値</p>
+        <input type="number" />
+        <!-- ファイルのアップロード -->
+        <p>画像、動画</p>
+        <input type="file" />
+        <!-- ボタンの設置 valueでボタンの中に文字入れる -->
+        <p>ボタン</p>
+        <input type="button" value="ここをクリック" />
+    </div>
+    <!------------------------------------------------------------>
 </body>
 </html>
