HTMLまとめ課題大問5：その他(リンク、九九表)

--- a/index.html
+++ b/index.html
@@ -59,5 +59,121 @@
         <input type="button" value="ここをクリック" />
     </div>
     <!------------------------------------------------------------>
+    <!-- 大問5:その他 --------------------------------------------->
+    <div>
+        <h2>大問５：その他</h2>
+        <p>別ページとぶボタン</p>
+        <!-- ボタンの設置 value.ボタンの中の文字 onclick.ボタン押すと反応する location.hrefボタン押したときの飛ばす場所の指定 -->
+        <input type="button" value="5億年ボタン" onclick="location.href='./subpage.html'">
+        <!-- table.表全体の範囲 border.枠線つける bordercolor.枠線に色付ける width.height.表全体の大きさの指定（横.縦） -->
+        <table border="5" bordercolor="red" width="450" height="500">
+            <tr>
+                <!-- 表の見出し colspan.セルを横にx個つなげる align.物理的なデータの表記位置の指定 -->
+                <th colspan="9" align="center">九九表</th>
+            </tr>
+            <!-- 表の行 align.trで囲まれている範囲すべての物理的なデータ位置の指定 bgcolor.セルに色を付ける -->
+            <tr align="center" bgcolor="yellow">
+                <!-- データを書き込む width.セルごとの物理的な大きさの指定(横) -->
+                <td width="50">1</td>
+                <td width="50">2</td>
+                <td width="50">3</td>
+                <td width="50">4</td>
+                <td width="50">5</td>
+                <td width="50">6</td>
+                <td width="50">7</td>
+                <td width="50">8</td>
+                <td width="50">9</td>
+            </tr>
+            <tr align="center">
+                <td bgcolor="yellow" width="50">2</td>
+                <td width="50">4</td>
+                <td width="50">6</td>
+                <td width="50">8</td>
+                <td width="50">10</td>
+                <td width="50">12</td>
+                <td width="50">14</td>
+                <td width="50">16</td>
+                <td width="50">18</td>
+            </tr>
+            <tr align="center">
+                <td bgcolor="yellow" width="50">3</td>
+                <td width="50">6</td>
+                <td width="50">9</td>
+                <td width="50">12</td>
+                <td width="50">15</td>
+                <td width="50">18</td>
+                <td width="50">21</td>
+                <td width="50">24</td>
+                <td width="50">27</td>
+            </tr>
+            <tr align="center">
+                <td bgcolor="yellow" width="50">4</td>
+                <td width="50">8</td>
+                <td width="50">12</td>
+                <td width="50">16</td>
+                <td width="50">20</td>
+                <td width="50">24</td>
+                <td width="50">28</td>
+                <td width="50">32</td>
+                <td width="50">36</td>
+            </tr>
+            <tr align="center">
+                <td bgcolor="yellow" width="50">5</td>
+                <td width="50">10</td>
+                <td width="50">15</td>
+                <td width="50">20</td>
+                <td width="50">25</td>
+                <td width="50">30</td>
+                <td width="50">35</td>
+                <td width="50">40</td>
+                <td width="50">45</td>
+            </tr>
+            <tr align="center">
+                <td bgcolor="yellow" width="50">6</td>
+                <td width="50">12</td>
+                <td width="50">18</td>
+                <td width="50">24</td>
+                <td width="50">30</td>
+                <td width="50">36</td>
+                <td width="50">42</td>
+                <td width="50">48</td>
+                <td width="50">54</td>
+            </tr>
+            <tr align="center">
+                <td bgcolor="yellow" width="50">7</td>
+                <td width="50">14</td>
+                <td width="50">21</td>
+                <td width="50">28</td>
+                <td width="50">35</td>
+                <td width="50">42</td>
+                <td width="50">49</td>
+                <td width="50">56</td>
+                <td width="50">63</td>
+            </tr>
+            <tr align="center">
+                <td bgcolor="yellow" width="50">8</td>
+                <td width="50">16</td>
+                <td width="50">24</td>
+                <td width="50">32</td>
+                <td width="50">40</td>
+                <td width="50">48</td>
+                <td width="50">56</td>
+                <td width="50">64</td>
+                <td width="50">72</td>
+            </tr>
+            <tr align="center">
+                <td bgcolor="yellow" width="50">9</td>
+                <td width="50">18</td>
+                <td width="50">27</td>
+                <td width="50">36</td>
+                <td width="50">45</td>
+                <td width="50">54</td>
+                <td width="50">63</td>
+                <td width="50">72</td>
+                <td width="50">81</td>
+            </tr>
+        </table>
+    </div>
+    <!------------------------------------------------------------>
 </body>
 </html>
