--- a/subPage.html
+++ b/subPage.html
@@ -7,5 +7,18 @@
     <meta name="description" content="subpage">
 </head>
 <body>
+    <h1>５億年がんばれ</h1>
+    <ul>
+        <li>１年目</li>
+        <li>２年目</li>
+        <li>３年目</li>
+        <li>...............</li>
+        <li>１万年目</li>
+        <li>.........................</li>
+        <li>１億年目</li>
+        <li>..............................................</li>
+        <li>５億年！！！！</li>
+    </ul>
+    <input type="button" value="１００万円あげます！" onclick="location.href='./index.html'">
 </body>
 </html>
