誤字あったから修正最終

--- a/html_css2.html
+++ b/html_css2.html
@@ -55,7 +55,7 @@
             fixed→ブラウザウィンドウに対しての位置指定
         </p>
         <p style="background-color: aquamarine; position: relative; top: 600px; left: 300px; width: 200px; height: 100px;">
-            relaticeでの位置指定
+            relativeでの位置指定
         </p>
     </div>
     <div style="background-color: gold; position: fixed; top: 700px; left: 500px; width: 100px; height: 100px;">
