改行忘れ修正後

--- a/html_css2.html
+++ b/html_css2.html
@@ -51,7 +51,7 @@
             位置１<br/>
             static→親に対して左上（デフォルト位置）に固定　※親にはつけたらダメ<br/>
             relative→親に対してのデフォルト位置から相対的に移動<br/>
-            absolute→親に対しての絶対的な位置指定
+            absolute→親に対しての絶対的な位置指定<br/>
             fixed→ブラウザウィンドウに対しての位置指定
         </p>
         <p style="background-color: aquamarine; position: relative; top: 600px; left: 300px; width: 200px; height: 100px;">
