display_css.htmlに移動するボタン設置

--- a/subPage.html
+++ b/subPage.html
@@ -20,5 +20,6 @@
         <li>５億年！！！！</li>
     </ul>
     <input type="button" value="１００万円あげます！" onclick="location.href='./index.html'">
+    <input type="button" value="display" onclick="location.href='./display_css.html'">
 </body>
 </html>
