プラスでちょっと修正後

--- a/practice_play.html
+++ b/practice_play.html
@@ -7,9 +7,9 @@
     <meta name="description" content="play">
     <link rel="stylesheet" href="./plactice_play.css">
 </head>
-<body style="margin-top: 20px;">
+<body style="margin-bottom: 20px;">
     <h1 style="width:  98%; padding: 0px; margin-top: 25px;" align="center">遊んでみようCSS編</h1>
-    <div style="width: 98%; position: relative; padding: 0px; margin-top: 25px; display: flex;">
+    <div style="width: 98%; padding: 0px; margin-top: 25px; display: flex;">
         <div class="element">           
             <span id="red">
                 火属性
